--- a/docfx_project/site/manifest.json
+++ b/docfx_project/site/manifest.json
@@ -174,7 +174,7 @@
       "output": {
         ".html": {
           "relative_path": "home/faq.html",
-          "hash": "lIIVnYFkZLBaydgtyroA4w=="
+          "hash": "mnFp/5ZOX+rFT6bIyzXsew=="
         }
       },
       "is_incremental": false,
@@ -445,7 +445,7 @@
       "output": {
         ".html": {
           "relative_path": "home/overview.html",
-          "hash": "0CRZCU8NSfJdZF5q8i62xw=="
+          "hash": "zx/POrb6HfwLLX8KOV6PgA=="
         }
       },
       "is_incremental": false,
@@ -597,7 +597,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/access-ud-directories.html",
-          "hash": "t9S3K9nJbhry/MstKto4ng=="
+          "hash": "9WLpts066kLwMutJeiJ5lQ=="
         }
       },
       "is_incremental": false,
@@ -633,7 +633,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/clone-environment.html",
-          "hash": "sk3s9gENor00/oaeuOQigg=="
+          "hash": "6nON2Od4enUDbzlgs1XBZw=="
         }
       },
       "is_incremental": false,
@@ -653,11 +653,11 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "home/techguides/components-products.md",
+      "source_relative_path": "home/techguides/components-products-copy.md",
       "output": {
         ".html": {
-          "relative_path": "home/techguides/components-products.html",
-          "hash": "JfnOIHm324BVdmF4NHyGdw=="
+          "relative_path": "home/techguides/components-products-copy.html",
+          "hash": "GYeRBZSeE6eNnbpnQm1csg=="
         }
       },
       "is_incremental": false,
@@ -665,11 +665,38 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "home/techguides/components-products.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/techguides/components-products.html",
+          "hash": "WZP4LtABBIQf4LAGkQj9pQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
+      "type": "Conceptual",
       "source_relative_path": "home/techguides/create-publish-template.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/create-publish-template.html",
-          "hash": "+PdgVG2jSsOE7Y96GAN/RQ=="
+          "hash": "7nV0TeXHym6mv3lCZG3lvQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "home/techguides/create-user-role.md",
+      "output": {
+        ".html": {
+          "relative_path": "home/techguides/create-user-role.html",
+          "hash": "avtgRrDiaaMWjAme2lIbLA=="
         }
       },
       "is_incremental": false,
@@ -693,7 +720,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/environment-basic-operations.html",
-          "hash": "173/Gmya9IOJSjysJH64KA=="
+          "hash": "SDnz09vDRUibHNBd6708ng=="
         }
       },
       "is_incremental": false,
@@ -729,7 +756,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/factories.html",
-          "hash": "nKgLIl0Rnku6Q9C5hK+miw=="
+          "hash": "kBe3hXPnNAG/p/XoCXdCBg=="
         }
       },
       "is_incremental": false,
@@ -753,7 +780,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/fix-issues-factory-run.html",
-          "hash": "VhjzSzA+O5jTR7u4XuwUnA=="
+          "hash": "KFZHwyg7GM8HmX79he9NAA=="
         }
       },
       "is_incremental": false,
@@ -1073,6 +1100,17 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/artifactory-test-structure.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/artifactory_view.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/artifactory_view.png"
         }
       },
       "is_incremental": false,
@@ -1542,6 +1580,72 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/components-and-products-artifactorykey.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/components-and-products-artifactorykey.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/components-and-products-artifactoryurl.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/components-and-products-artifactoryurl.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/components-and-products-localcompomentpath.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/components-and-products-localcompomentpath.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/components-and-products-uploadurl.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/components-and-products-uploadurl.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/components-products-mobaxterm.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/components-products-mobaxterm.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/components-products-uploaded-binary.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/components-products-uploaded-binary.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/connection-type.png",
       "output": {
         "resource": {
@@ -1700,6 +1804,39 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/create-template-stream.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/create-user-role-permissions.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/create-user-role-permissions.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/create-user-role.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/create-user-role.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/create-user-select-role.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/create-user-select-role.png"
         }
       },
       "is_incremental": false,
@@ -2444,6 +2581,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/environment-schedule.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/environment-schedule.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/export-environment.png",
       "output": {
         "resource": {
@@ -2591,6 +2739,17 @@
       "output": {
         "resource": {
           "relative_path": "home/techguides/images/factory-run-environment.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/factory-scheduler.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/factory-scheduler.png"
         }
       },
       "is_incremental": false,
@@ -4083,10 +4242,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/run-factory-completed.png",
+      "source_relative_path": "home/techguides/images/run-factory-abort-factory.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/run-factory-completed.png"
+          "relative_path": "home/techguides/images/run-factory-abort-factory.png"
         }
       },
       "is_incremental": false,
@@ -4138,10 +4297,21 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/run-factory-test-deploy.png",
+      "source_relative_path": "home/techguides/images/run-factory-new-environment.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/run-factory-test-deploy.png"
+          "relative_path": "home/techguides/images/run-factory-new-environment.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/run-factory-test-completed.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/run-factory-test-completed.png"
         }
       },
       "is_incremental": false,
@@ -4347,10 +4517,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/stage-metadata.png",
+      "source_relative_path": "home/techguides/images/stage_metadata.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/stage-metadata.png"
+          "relative_path": "home/techguides/images/stage_metadata.png"
         }
       },
       "is_incremental": false,
@@ -4358,10 +4528,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/streams-create-stage.png",
+      "source_relative_path": "home/techguides/images/start-all-user-env.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/streams-create-stage.png"
+          "relative_path": "home/techguides/images/start-all-user-env.png"
         }
       },
       "is_incremental": false,
@@ -4369,10 +4539,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/streams-create.png",
+      "source_relative_path": "home/techguides/images/stop-all-user-env.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/streams-create.png"
+          "relative_path": "home/techguides/images/stop-all-user-env.png"
         }
       },
       "is_incremental": false,
@@ -4380,10 +4550,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/streams-created.png",
+      "source_relative_path": "home/techguides/images/streams-cloned.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/streams-created.png"
+          "relative_path": "home/techguides/images/streams-cloned.png"
         }
       },
       "is_incremental": false,
@@ -4391,10 +4561,10 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/streams-delete-stage.png",
+      "source_relative_path": "home/techguides/images/streams_create.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/streams-delete-stage.png"
+          "relative_path": "home/techguides/images/streams_create.png"
         }
       },
       "is_incremental": false,
@@ -4402,10 +4572,54 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/streams-delete-streams.png",
+      "source_relative_path": "home/techguides/images/streams_create_stage.png",
       "output": {
         "resource": {
-          "relative_path": "home/techguides/images/streams-delete-streams.png"
+          "relative_path": "home/techguides/images/streams_create_stage.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/streams_created.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/streams_created.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/streams_delete_stage.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/streams_delete_stage.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/streams_delete_streams.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/streams_delete_streams.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "home/techguides/images/streams_edited.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/streams_edited.png"
         }
       },
       "is_incremental": false,
@@ -4798,6 +5012,17 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "home/techguides/images/trigger-new-template.png",
+      "output": {
+        "resource": {
+          "relative_path": "home/techguides/images/trigger-new-template.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "home/techguides/images/tsa-live-file.png",
       "output": {
         "resource": {
@@ -4919,17 +5144,6 @@
     },
     {
       "type": "Resource",
-      "source_relative_path": "home/techguides/images/user-new.png",
-      "output": {
-        "resource": {
-          "relative_path": "home/techguides/images/user-new.png"
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Resource",
       "source_relative_path": "home/techguides/images/users-tab.png",
       "output": {
         "resource": {
@@ -5021,12 +5235,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/run-factory.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/run-factory.html",
-          "hash": "HQLq/lFqtFlbKUar6x2jWw=="
+          "hash": "vwxco8oEc8ahveYEgpl1vw=="
         }
       },
       "is_incremental": false,
@@ -5045,24 +5262,30 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/stage.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/stage.html",
-          "hash": "JmCHmfZI6DOqlg2zhK9r2g=="
+          "hash": "zJv0e2pmsfI73J01z8Pd/w=="
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/stream.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/stream.html",
-          "hash": "GG1Dc9ghLNAxeVU1gcK9Pw=="
+          "hash": "jXNo2D7UbpY9Wv5VMlvRTw=="
         }
       },
       "is_incremental": false,
@@ -5141,12 +5364,15 @@
       "version": ""
     },
     {
+      "log_codes": [
+        "InvalidFileLink"
+      ],
       "type": "Conceptual",
       "source_relative_path": "home/techguides/user-creation-in-paas.md",
       "output": {
         ".html": {
           "relative_path": "home/techguides/user-creation-in-paas.html",
-          "hash": "09djbIncdLx76A9AynJ7Rw=="
+          "hash": "WtgpnXZz3YVt1jEDnbo1Hg=="
         }
       },
       "is_incremental": false,
@@ -5170,19 +5396,7 @@
       "output": {
         ".html": {
           "relative_path": "home/temenos-cloud-templates.html",
-          "hash": "fp4ECo/Qwco+Kiwdj+A3Sw=="
-        }
-      },
-      "is_incremental": false,
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "home/temenos-implementation-methodology.md",
-      "output": {
-        ".html": {
-          "relative_path": "home/temenos-implementation-methodology.html",
-          "hash": "6WjLWK99KZHBNdiVu67DTQ=="
+          "hash": "ZRHPiWpYbOtCEAThpVsCOQ=="
         }
       },
       "is_incremental": false,
@@ -5194,7 +5408,7 @@
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "C9R4XIZk2DQMS4rnoPD8Ow=="
+          "hash": "3wBwBQ9f+n43SA82FhvDPg=="
         }
       },
       "is_incremental": false,
@@ -5313,14 +5527,14 @@
         "incrementalPhase": "build"
       },
       "processors": {
-        "ResourceDocumentProcessor": {
-          "can_incremental": false,
-          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
-          "incrementalPhase": "build"
-        },
         "RestApiDocumentProcessor": {
           "can_incremental": false,
           "details": "Processor RestApiDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
+          "incrementalPhase": "build"
+        },
+        "ResourceDocumentProcessor": {
+          "can_incremental": false,
+          "details": "Processor ResourceDocumentProcessor cannot suppport incremental build because the processor doesn't implement ISupportIncrementalDocumentProcessor interface.",
           "incrementalPhase": "build"
         },
         "ManagedReferenceDocumentProcessor": {
