--- a/docfx_project/site/manifest.json
+++ b/docfx_project/site/manifest.json
@@ -18,7 +18,7 @@
       "output": {
         ".html": {
           "relative_path": "home/Legal.html",
-          "hash": "WqYQbvvtdI07ZGQKPMttWg=="
+          "hash": "y3ghpMy4zVvm1s2PfQjt4A=="
         }
       },
       "is_incremental": false,
@@ -30,7 +30,7 @@
       "output": {
         ".html": {
           "relative_path": "home/access-ud-directories-video.html",
-          "hash": "qpFlne8Mkf4gp/6GN2JLiw=="
+          "hash": "YLcb8Lg5WczfGjIPDtLdgQ=="
         }
       },
       "is_incremental": false,
@@ -42,7 +42,7 @@
       "output": {
         ".html": {
           "relative_path": "home/add-features-to-environment-video.html",
-          "hash": "sUFpO+dZIOPOtuPFdkotxA=="
+          "hash": "aq88hLSE5Rr+gWp2U//e5g=="
         }
       },
       "is_incremental": false,
@@ -54,7 +54,7 @@
       "output": {
         ".html": {
           "relative_path": "home/architecture.html",
-          "hash": "cdlKFkwYt8AnrtGE9o7BFw=="
+          "hash": "gpoQ9wU4TTz1QuLkwS3WLQ=="
         }
       },
       "is_incremental": false,
@@ -66,7 +66,7 @@
       "output": {
         ".html": {
           "relative_path": "home/assemble.html",
-          "hash": "hCsk39/OVMMT+tEkOMFIyA=="
+          "hash": "fzIx9OOVGZCKv19jFuHbWg=="
         }
       },
       "is_incremental": false,
@@ -78,7 +78,7 @@
       "output": {
         ".html": {
           "relative_path": "home/benefits.html",
-          "hash": "J0FFoIljJPwl+6H3tR3KGg=="
+          "hash": "53WlkUNSwNhb8n0qruvmjw=="
         }
       },
       "is_incremental": false,
@@ -90,7 +90,7 @@
       "output": {
         ".html": {
           "relative_path": "home/clone-environment-video.html",
-          "hash": "JfG/AEWRXF3gwIAJNDg5XQ=="
+          "hash": "x4fyRows14AXzb90jAT1MQ=="
         }
       },
       "is_incremental": false,
@@ -102,7 +102,7 @@
       "output": {
         ".html": {
           "relative_path": "home/cloud-environments-customize-templates.html",
-          "hash": "KxcHmX67LVXLowvt998XMA=="
+          "hash": "ftgtg516m4bo5GfGtBabyg=="
         }
       },
       "is_incremental": false,
@@ -114,7 +114,7 @@
       "output": {
         ".html": {
           "relative_path": "home/create-dev-env-video.html",
-          "hash": "58PHdcgq3KPtbIpXQX8x4w=="
+          "hash": "ZFWIudkqjTYI5da1yhUGpg=="
         }
       },
       "is_incremental": false,
@@ -126,7 +126,7 @@
       "output": {
         ".html": {
           "relative_path": "home/design-studio-tutorials.html",
-          "hash": "Zx4FyuHj9K/qKjIrAehI8A=="
+          "hash": "qupzO2Vx1UHq2QbZH0fAxQ=="
         }
       },
       "is_incremental": false,
@@ -138,7 +138,7 @@
       "output": {
         ".html": {
           "relative_path": "home/enterprise-view.html",
-          "hash": "p/Ii4w1zfDWbwabaQ129fw=="
+          "hash": "U3wQeOo3sLCwT7plaveUXA=="
         }
       },
       "is_incremental": false,
@@ -150,7 +150,7 @@
       "output": {
         ".html": {
           "relative_path": "home/export-import-database-video.html",
-          "hash": "BmXq3NeqSZEcEj9eal/AEQ=="
+          "hash": "EAvmMUrNHmb5IJWgHbgQoA=="
         }
       },
       "is_incremental": false,
@@ -162,7 +162,7 @@
       "output": {
         ".html": {
           "relative_path": "home/extend.html",
-          "hash": "rS1NWm2Dg/IZyF3w9oFsVQ=="
+          "hash": "Ez5kAhcDKDV8iGkTW8R4mA=="
         }
       },
       "is_incremental": false,
@@ -174,7 +174,7 @@
       "output": {
         ".html": {
           "relative_path": "home/faq.html",
-          "hash": "t3c2+hBVsjpPjf3/mriZgg=="
+          "hash": "wec/FelG0eMQMmkq8YRGMQ=="
         }
       },
       "is_incremental": false,
@@ -186,7 +186,7 @@
       "output": {
         ".html": {
           "relative_path": "home/fcm-configuration-video.html",
-          "hash": "9EOrb9DDCbr1qm/c0qonLg=="
+          "hash": "FwYvn/rQ3n8bB30UW55fIQ=="
         }
       },
       "is_incremental": false,
@@ -198,7 +198,7 @@
       "output": {
         ".html": {
           "relative_path": "home/how-to-assemble.html",
-          "hash": "bRmvzSUYQ5OsTtIN2SN8tA=="
+          "hash": "/ctcHI6LLC+T/FdQ4Yv8Ug=="
         }
       },
       "is_incremental": false,
@@ -210,7 +210,7 @@
       "output": {
         ".html": {
           "relative_path": "home/how-to-extend.html",
-          "hash": "xVVPMBHCjWBH725XZkjLMQ=="
+          "hash": "ihfSDFss/ILgQ6wJsJUL3A=="
         }
       },
       "is_incremental": false,
@@ -409,7 +409,7 @@
       "output": {
         ".html": {
           "relative_path": "home/index.html",
-          "hash": "Hd3fQ8y1k5xG5ezQhHA86A=="
+          "hash": "lopdJABOV4doQuHey3r0Jw=="
         }
       },
       "is_incremental": false,
@@ -421,7 +421,7 @@
       "output": {
         ".html": {
           "relative_path": "home/jenkins-build-video.html",
-          "hash": "a1gv8OvA7NeG51pVGzcV1w=="
+          "hash": "zE62Ak5yjQOGKGmT7Rl/zg=="
         }
       },
       "is_incremental": false,
@@ -433,7 +433,7 @@
       "output": {
         ".html": {
           "relative_path": "home/manage-artifactory-test-cycle-video.html",
-          "hash": "/tdCFVdVbOCj2vJ3Vd3zaQ=="
+          "hash": "jGCBrGl1RTOnMKVqlvGE1Q=="
         }
       },
       "is_incremental": false,
@@ -445,7 +445,7 @@
       "output": {
         ".html": {
           "relative_path": "home/overview.html",
-          "hash": "fokAPJbDtcSHrOlu5Jza1g=="
+          "hash": "hG7xNX/9k/BWOBkfnmO5yg=="
         }
       },
       "is_incremental": false,
@@ -468,7 +468,7 @@
       "output": {
         ".html": {
           "relative_path": "home/run-factory-video.html",
-          "hash": "htOeeMTqZqEpt/ettv2m0Q=="
+          "hash": "KkvoY+SZV0c/tfUL2bNTmg=="
         }
       },
       "is_incremental": false,
@@ -513,7 +513,7 @@
       "output": {
         ".html": {
           "relative_path": "home/setup-components-products-video.html",
-          "hash": "MaoeP9DstCkAp2XzyzCF7Q=="
+          "hash": "gRjFFIcBZtuKR9pdA6Crtg=="
         }
       },
       "is_incremental": false,
@@ -525,7 +525,7 @@
       "output": {
         ".html": {
           "relative_path": "home/setup-factories-video.html",
-          "hash": "6hiaFWdFud/rAqGL9syF+w=="
+          "hash": "HoGTd3ZhkZ1dq+hSzyEY8Q=="
         }
       },
       "is_incremental": false,
@@ -537,7 +537,7 @@
       "output": {
         ".html": {
           "relative_path": "home/setup-stages-video.html",
-          "hash": "ALdsXXHQ52b4Mmhbp48iOw=="
+          "hash": "HkmEySMRcvYStsmFXEuX+w=="
         }
       },
       "is_incremental": false,
@@ -549,7 +549,7 @@
       "output": {
         ".html": {
           "relative_path": "home/setup-streams-video.html",
-          "hash": "3mvSyURq/Cf/g/jCYCEJwQ=="
+          "hash": "Jtm/aTwv1Q39uRllICtPug=="
         }
       },
       "is_incremental": false,
@@ -561,7 +561,7 @@
       "output": {
         ".html": {
           "relative_path": "home/setup-testcases-video.html",
-          "hash": "7k36hmWP46tRZVermd2cZA=="
+          "hash": "NQEvQLW37MFpemGszcjy4A=="
         }
       },
       "is_incremental": false,
@@ -573,7 +573,7 @@
       "output": {
         ".html": {
           "relative_path": "home/support.html",
-          "hash": "joCo5aJI6nGqYfYXFMcvyg=="
+          "hash": "c143LxYQ33fyosalCzqz5Q=="
         }
       },
       "is_incremental": false,
@@ -585,7 +585,7 @@
       "output": {
         ".html": {
           "relative_path": "home/tcd-hosting-options.html",
-          "hash": "7EGB9eTY8xMDiGlSCKgX9Q=="
+          "hash": "5AXzj+rmS7IEznFs5eBlDw=="
         }
       },
       "is_incremental": false,
@@ -597,7 +597,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/access-ud-directories.html",
-          "hash": "Q/n2zygIJGN8PD2oHw9HGw=="
+          "hash": "GrX0ySHycM96sK/fX7Yn9w=="
         }
       },
       "is_incremental": false,
@@ -609,7 +609,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/add-app-endpoint.html",
-          "hash": "6eseSnys5wNS5eyxsgLjhA=="
+          "hash": "wi9AK15k0TuEszRvnub/XA=="
         }
       },
       "is_incremental": false,
@@ -621,7 +621,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/artifactory-test-cycle.html",
-          "hash": "OQMBwAGjkrWehRUSC5wtHA=="
+          "hash": "IcUT2aNfBgi9NFAj4EzIew=="
         }
       },
       "is_incremental": false,
@@ -633,7 +633,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/clone-environment.html",
-          "hash": "kQnnx7P76+wBwhkfTBTjZA=="
+          "hash": "qIjHsCQ3BCMenDPab3eBMQ=="
         }
       },
       "is_incremental": false,
@@ -645,7 +645,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/component-product.html",
-          "hash": "FC1Qqtf8NVFtIJgwJJfG7A=="
+          "hash": "rH9XK5cCAuNsKWaJa+zH8g=="
         }
       },
       "is_incremental": false,
@@ -657,7 +657,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/components-products-copy.html",
-          "hash": "Gl0veR48uWqom2S4QkZQXQ=="
+          "hash": "ckODAOE8HTzAICpIKmUbDg=="
         }
       },
       "is_incremental": false,
@@ -669,7 +669,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/components-products.html",
-          "hash": "WrNQt4BLTjeL0XUrU7hf9w=="
+          "hash": "YswqyudPNQhv9wBswFEDPA=="
         }
       },
       "is_incremental": false,
@@ -684,7 +684,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/create-publish-template.html",
-          "hash": "Z5CU/9ideEjd5LTQsqKIGQ=="
+          "hash": "aAGXO4XqbPtJcTY+BCzTGA=="
         }
       },
       "is_incremental": false,
@@ -696,7 +696,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/create-user-role.html",
-          "hash": "/wIOJxW5MxySeiF0JHZiyg=="
+          "hash": "qVAPNNGIzEi+w8A2/+zf3w=="
         }
       },
       "is_incremental": false,
@@ -708,7 +708,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/customize-templates.html",
-          "hash": "1aTYhUJctnzk+X02I1VMuQ=="
+          "hash": "dBbdIJ0+9MM2M3+sS7/zsg=="
         }
       },
       "is_incremental": false,
@@ -720,7 +720,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/environment-basic-operations.html",
-          "hash": "er31fvfqvc3bqjXeO/Ni7g=="
+          "hash": "ByPhrJnzWtAi1c+DHFV0wQ=="
         }
       },
       "is_incremental": false,
@@ -732,7 +732,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/environment-creation-in-paas.html",
-          "hash": "gllW3JCGfs1gecMe4kv2Fw=="
+          "hash": "+A4H+l/6/r5Z8jAx3zOHSA=="
         }
       },
       "is_incremental": false,
@@ -744,7 +744,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/export-import-database.html",
-          "hash": "da2nEfVMpefMFddKze9sdA=="
+          "hash": "riZn9sATtvKskRRToDfOkQ=="
         }
       },
       "is_incremental": false,
@@ -756,7 +756,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/factories.html",
-          "hash": "UH0SfKkDZ7XkzV44N4yHAA=="
+          "hash": "G+IzuZ2aedNsgswbC3Z9bw=="
         }
       },
       "is_incremental": false,
@@ -768,7 +768,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/fcm-configuration.html",
-          "hash": "wLA8/E8EsTe/pw1x/vRBBA=="
+          "hash": "3mrlsayYF+QaD8GxSZhCdQ=="
         }
       },
       "is_incremental": false,
@@ -780,7 +780,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/fix-issues-factory-run.html",
-          "hash": "4aIjoZRdv9BXVMmdcYg9TQ=="
+          "hash": "igHCR8cJv4TsJTIFNbSC5w=="
         }
       },
       "is_incremental": false,
@@ -5192,7 +5192,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/index.html",
-          "hash": "Nu2pe5H8Ft1f/MAC5xmu8w=="
+          "hash": "jfSY9DAQ21lGBpfbr1e4Lw=="
         }
       },
       "is_incremental": false,
@@ -5204,7 +5204,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/jenkins-build-promote-pipelines.html",
-          "hash": "R9xCrADqpXd1YogQ08ZtYw=="
+          "hash": "JAwyNvTZED8LCmAEBqqnKQ=="
         }
       },
       "is_incremental": false,
@@ -5216,7 +5216,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/make-updates-cloud.html",
-          "hash": "t/3sJbnNDPs8AzyVjeyehA=="
+          "hash": "lcDg8wJKzK2Q5gv8GZqZJA=="
         }
       },
       "is_incremental": false,
@@ -5228,7 +5228,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/metadata.html",
-          "hash": "TqcdRn9D9CQ4J2DEMdRzAQ=="
+          "hash": "dg7cVhzY8apBmFO8jpr8SQ=="
         }
       },
       "is_incremental": false,
@@ -5243,7 +5243,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/run-factory.html",
-          "hash": "Rm5tcz4yUmOpe4ORspdqqQ=="
+          "hash": "G9Jd6CgksKkdVFfY2betog=="
         }
       },
       "is_incremental": false,
@@ -5255,7 +5255,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/stage-testcases.html",
-          "hash": "z0gqprGXeeId/aF5D/qHFw=="
+          "hash": "4ejNDy7BD7udBfrL4QUhWA=="
         }
       },
       "is_incremental": false,
@@ -5270,7 +5270,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/stage.html",
-          "hash": "g1aVSFREkzmR7rfv/GmT2g=="
+          "hash": "jqgqvDQnvw9b/0q7Fv0Iww=="
         }
       },
       "is_incremental": false,
@@ -5285,7 +5285,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/stream.html",
-          "hash": "ta/9HB2kW7M3zdvsfEqLnw=="
+          "hash": "oa52kONgC6N0N36Lixb2vg=="
         }
       },
       "is_incremental": false,
@@ -5297,7 +5297,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/t24-debug-design-studio.html",
-          "hash": "3AnB5NdSgPC8fyUTlMoIOw=="
+          "hash": "9I3U/bszwXh5fZH81Uaqqw=="
         }
       },
       "is_incremental": false,
@@ -5309,7 +5309,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/t24-development.html",
-          "hash": "cPDDLNagvgLC2FV6pVy1QQ=="
+          "hash": "4cS3YVDvgIL45n5ANd+1rg=="
         }
       },
       "is_incremental": false,
@@ -5321,7 +5321,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/tafj-db-setup.html",
-          "hash": "TdvxBAP83pw7lVhZkyCjgg=="
+          "hash": "IyqQKTzO1eUNlIQIDWFvUw=="
         }
       },
       "is_incremental": false,
@@ -5333,7 +5333,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/triage-workflow.html",
-          "hash": "W/M8YFED5LBsb8HyymuX5w=="
+          "hash": "n1s+zuT2eZ8m6/p4Z6raVQ=="
         }
       },
       "is_incremental": false,
@@ -5345,7 +5345,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/troubleshooting.html",
-          "hash": "yivLInd0dOJEsKLWCJ/qiw=="
+          "hash": "Yy/BFBi7OqaGZx67FeJpdg=="
         }
       },
       "is_incremental": false,
@@ -5357,7 +5357,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/use-gitlab-repository.html",
-          "hash": "MGzjS5UwW1HXmG0cT5h8Lw=="
+          "hash": "tgfKkATnOm6tFlm4d5MHtg=="
         }
       },
       "is_incremental": false,
@@ -5372,7 +5372,7 @@
       "output": {
         ".html": {
           "relative_path": "home/techguides/user-creation-in-paas.html",
-          "hash": "PoNXe8kniszIPBG/hfNtbw=="
+          "hash": "TnZgJ/6e5lVXk7+rySAJSQ=="
         }
       },
       "is_incremental": false,
@@ -5384,7 +5384,7 @@
       "output": {
         ".html": {
           "relative_path": "home/technical-overview.html",
-          "hash": "6NqdtVlk5prslcD8hTd+4Q=="
+          "hash": "5yhFib9D0vlCdRyuxVCcUg=="
         }
       },
       "is_incremental": false,
@@ -5396,7 +5396,7 @@
       "output": {
         ".html": {
           "relative_path": "home/temenos-cloud-templates.html",
-          "hash": "F9YAojBrhhOSSSE0czQE1w=="
+          "hash": "lcS2yp39cEnpNI/jzLr/Xg=="
         }
       },
       "is_incremental": false,
@@ -5408,7 +5408,7 @@
       "output": {
         ".html": {
           "relative_path": "home/toc.html",
-          "hash": "rXLJNYG9Sr7ClONxRWG8QA=="
+          "hash": "mJ+O5vbRPLxoKXOehxK82g=="
         }
       },
       "is_incremental": false,
@@ -5420,7 +5420,7 @@
       "output": {
         ".html": {
           "relative_path": "home/tutorials-assemble.html",
-          "hash": "4iz+ewwivyd4qrYFdw5ufA=="
+          "hash": "TpI1zd4MeDoLYSwPezZTEg=="
         }
       },
       "is_incremental": false,
@@ -5432,7 +5432,7 @@
       "output": {
         ".html": {
           "relative_path": "home/tutorials-extend.html",
-          "hash": "oXuFaRKbmqtOvLP5R0QJhQ=="
+          "hash": "tKyX71uryW8OiuQ19Jr1jg=="
         }
       },
       "is_incremental": false,
@@ -5444,7 +5444,7 @@
       "output": {
         ".html": {
           "relative_path": "home/users.html",
-          "hash": "YaYCidXrvlN/Dd2ChNSC7Q=="
+          "hash": "bDE/71KUE67LiK68Q0qAuA=="
         }
       },
       "is_incremental": false,
@@ -5456,7 +5456,7 @@
       "output": {
         ".html": {
           "relative_path": "home/what-is-devx.html",
-          "hash": "Gry81nAkwUCezDEwckbqgA=="
+          "hash": "0+4KbOeJX22Lc91iNIVUUw=="
         }
       },
       "is_incremental": false,
@@ -5468,6 +5468,17 @@
       "output": {
         "resource": {
           "relative_path": "images/arrow.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "images/cloud-offering.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/cloud-offering.png"
         }
       },
       "is_incremental": false,
@@ -5496,27 +5507,34 @@
       "version": ""
     },
     {
-      "type": "Conceptual",
-      "source_relative_path": "index.md",
+      "type": "Resource",
+      "source_relative_path": "images/tcd-details.png",
       "output": {
-        ".html": {
-          "relative_path": "index.html",
-          "hash": "fCZOH4j4Yg/6gVn5kdI7ag=="
+        "resource": {
+          "relative_path": "images/tcd-details.png"
         }
       },
       "is_incremental": false,
       "version": ""
     },
     {
-      "log_codes": [
-        "InvalidFileLink"
-      ],
+      "type": "Resource",
+      "source_relative_path": "images/tcd.png",
+      "output": {
+        "resource": {
+          "relative_path": "images/tcd.png"
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
       "type": "Conceptual",
-      "source_relative_path": "overview.md",
+      "source_relative_path": "index.md",
       "output": {
         ".html": {
-          "relative_path": "overview.html",
-          "hash": "mWj4xvIV/hClFAomA3Kezg=="
+          "relative_path": "index.html",
+          "hash": "ogmIa52kLH0MH7ZxmMPgKA=="
         }
       },
       "is_incremental": false,
@@ -5528,7 +5546,7 @@
       "output": {
         ".html": {
           "relative_path": "toc.html",
-          "hash": "+KwBc7RHoyTtVuEX8hudOg=="
+          "hash": "UFO1kVcRef6tNvGLdU8uCQ=="
         }
       },
       "is_incremental": false,
